--- a/client/src/styles/accueil.css
+++ b/client/src/styles/accueil.css
@@ -2,5 +2,13 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: center;
+    align-items: flex-start;
+    margin-left: 25%;
+}
+
+button {
+    height: 100px;
+    width: 300px;
+    font-size: 35px;
+    margin-bottom: 25px;
 }
