Refactor admin and accueil components with improved button styles and new functionality
- Updated button styles in Redirection and AjoutUtilisateurs components for consistency.
- Added ModifHero component for hero modification with skill management.
- Implemented SkillEffects component for managing skill effects.
- Enhanced Admin page to dynamically render selected components.
- Improved CSS styles for admin and accueil pages for better UI/UX.

--- a/client/src/styles/accueil.css
+++ b/client/src/styles/accueil.css
@@ -6,9 +6,12 @@
     margin-left: 25%;
 }
 
-button {
+.bouton-redirect {
     height: 100px;
     width: 300px;
-    font-size: 35px;
+    font-size: 15px;
     margin-bottom: 25px;
+    background-color: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(189, 189, 189, 1) 50%, rgba(255, 255, 255, 1) 100%);
+    color: black;
+    border: 1px solid black;
 }
