--- a/client/src/styles/inscriptionconnexion.css
+++ b/client/src/styles/inscriptionconnexion.css
@@ -31,3 +31,28 @@ input {
     margin-top: 25px;
     font-size: 15px;
 }
+
+.message {
+    margin-top: 15px;
+    padding: 10px;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.message.error {
+    background-color: rgba(255, 0, 0, 0.1);
+    border: 1px solid #ffb3b3;
+    color: #cc0000;
+}
+
+.message.success {
+    background-color: rgba(0, 128, 0, 0.1);
+    border: 1px solid #99e699;
+    color: #006600;
+}
+
+.submit-button:disabled,
+.switch-button:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+}
