--- a/client/src/styles/accueil.css
+++ b/client/src/styles/accueil.css
@@ -16,6 +16,16 @@
     border: 1px solid black;
 }
 
+.bouton-redirect-disabled {
+    height: 75px;
+    width: 250px;
+    font-size: 12px;
+    margin-bottom: 25px;
+    background-color: rgb(180, 180, 180);
+    color: black;
+    border: 1px solid black;
+}
+
 .logout-button {
     padding: 8px 16px;
     border: none;
