--- a/client/src/styles/background.css
+++ b/client/src/styles/background.css
@@ -6,3 +6,11 @@ h1 {
     font-size: 72px;
     text-align: center;
 }
+
+h3 {
+    font-size: 15px;
+    text-align: center;
+    color: #3949ab;
+    cursor: pointer;
+    transition: color 0.2s;
+}
